--- a/src/App.css
+++ b/src/App.css
@@ -401,7 +401,7 @@ nav{
   width: 100%;
   max-width: 300px;
   height: 250px;
-  background-color: rgb(177, 177, 177);
+  background-color: rgb(201, 201, 201);
   backdrop-filter: blur(24px);
   border-radius: 10px;
   padding: 15px;
@@ -471,14 +471,17 @@ nav{
   color: white;
   width: 40px;
   height: 40px;
-  background-color: rgba(0, 110, 33, 0.8);
+  background-color: rgb(0, 77, 0);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 45%;
+  top: 50%;
   transform: translateY(-50%);
   z-index: 10;
+  @media (max-width:426px) {
+    display: none;
+  }
 }
 
 /* Positioning */
@@ -502,5 +505,220 @@ nav{
 .swiper-container .swiper-button-next::after {
   font-size: 16px;
   font-weight: bold;
+  color: white;
+}
+.readmore-link{
+  text-decoration: none;
+  color: rgb(95, 95, 95);
+  font-weight: 700;
+}
+.swiper-slide-active .readmore-link{
+  text-decoration: none;
+  color: rgb(0, 193, 58);
+  font-weight: 700;
+}
+.swiper-slide-active .readmore-link .ri-arrow-right-circle-line{
+  font-size: 20px;
+  color: rgb(0, 193, 58);
+}
+.readmore-link .ri-arrow-right-circle-line{
+  font-size: 20px;
+  color: rgb(95, 95, 95);
+}
+
+/* MEDIA QUIRES */
+@media(max-width:363px){
+  .main-heading{
+    font-size: 30px;
+  }
+}
+
+/* INDUSTRIES WE SERVE SECTION */
+#industries-served-section{
+  width: 100%;
+  background-color: white;
+  float: left;
+  background-image: url(../src/assets/background-img.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.industries-served-wrapper{
+  width: 80%;
+  margin: 0 auto;
+  padding: 30px 0;
+  @media (max-width: 450px) {
+    width: 90%;
+  }
+}
+/* DROP DOWNS INDUSTRIES WE SERVE SECTION */
+.dropdown-container {
+  margin-top: 30px;
+}
+
+.dropdown-div {
+  margin-bottom: 20px;
+}
+
+.top-part {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgb(219, 219, 219);
+}
+
+.top-part button {
+  width: 100px;
+  height: 30px;
+  background-color: rgb(0, 77, 0);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.2s ease;
+  @media (max-width:649px) {
+    width: 60px;
+  }
+}
+
+.top-part button:hover {
+  background-color: rgb(15, 96, 41);
+}
+
+.top-part p {
+  color: rgb(78, 78, 78);
+}
+
+.top-part i {
+  color: rgb(0, 77, 0);
+}
+
+.dropdown-answer {
+  backdrop-filter: blur(10px);
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+}
+
+.dropdown-answer ol {
+  color: #414141;
+  margin: 10px 0;
+  padding-left: 20px;
+}
+
+@media (max-width: 484px) {
+  .top-part p,
+  .dropdown-answer ol {
+    font-size: 13px;
+  }
+}
+
+/* WORKSHOPS SECTION */
+
+.workshops-heading{
+  .small-text, .main-heading{
+    color: white;
+  }
+  .decorative-line2{
+    background-color: white;
+  }
+}
+#workshops-section{
+  width: 100%;
+  background-color: rgba(0, 77, 0, 0.967);
+  float: left;
+}
+.workshops-wrapper{
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 30px;
+  @media (max-width: 450px) {
+    width: 90%;
+  }
+}
+.workshop-heading{
+  color: white;
+  @media (max-width:348px) {
+    font-size: 15px;
+  }
+}
+.workshop-subheading{
+  color: rgb(38, 157, 38);
+  font-size: 15px;
+  @media (max-width:348px) {
+    font-size: 13px;
+  }
+}
+.workshop-card{
+  width: 300px;
+  height: 150px;
+  background-color: rgba(255, 255, 255, 0.029);
+  padding: 0 20px;
+  border-radius: 5px;
+}
+.row{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+/* WHY CHOOSE US SECTION */
+#why-choose-us-section{
+  width: 100%;
+  background-color: rgb(187, 187, 187);
+  float: left;
+}
+.why-choose-us-card{
+  width: 400px;
+  height: 200px;
+  background-color: pink;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+.why-choose-us-card-container{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
+  /* flex-wrap: wrap; */
+  @media (max-width: 941px) {
+    flex-wrap: wrap;
+  }
+}
+.why-choose-us-wrapper{
+  width: 80%;
+  margin: 0 auto;
+  padding: 50px 0;
+}
+.why-choose-us-card-filter{
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.696);
+  border-radius: 3px;
+}
+
+.card-1{
+  background-image: url(../src/assets/giraff.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.card-2{
+  background-image: url(../src/assets/artificial-intelligence.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.card-3{
+  background-image: url(../src/assets/problem-solution.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.why-choose-us-card-filter{
   color: white;
 }
