--- a/src/pages/blogs/blog.css
+++ b/src/pages/blogs/blog.css
@@ -6,6 +6,20 @@
     background-size: cover;
     position: relative;
 }
+#blog2--section{
+    height: 100vh;
+    background-image: url(https://i.ibb.co/JwBWNFqg/woman-records-conversation-audience.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+#blog3--section{
+    height: 100vh;
+    background-image: url(https://i.ibb.co/SDzD4rgp/front-view-formal-male-journalist.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
 .blog--filter{
     width: 100%;
     height: 100%;
